--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,20 +16,26 @@
         android:theme="@style/Theme.ProyekAkhirPAM"
         tools:targetApi="31">
         <activity
-            android:name=".RincianPembelianActivity"
+            android:name=".TemanActivity"
             android:exported="false" />
         <activity
-            android:name=".HistoryActivity"
-            android:exported="false" /> <!-- Hanya SATU deklarasi AccountActivity -->
+            android:name=".PertemananActivity"
+            android:exported="false" />
         <activity
-            android:name=".AccountActivity"
-            android:exported="true" >
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RincianPembelianActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DaftarPembelianActivity"
+            android:exported="false" /> <!-- Hanya SATU deklarasi AccountActivity -->
         <activity android:name=".DonationActivity" />
         <activity
             android:name=".EditProfileActivity"
