--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyekAkhirPAM"
         tools:targetApi="31">
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false"/>
 
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DetailActivity"/>
     </application>
-
 </manifest>
