--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.ProyekAkhirPAM"
         tools:targetApi="31">
         <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".TemanActivity"
             android:exported="false" />
         <activity
@@ -41,7 +44,7 @@
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".ProfileActivity"
+            android:name=".InfoProfileActivity"
             android:exported="false" />
     </application>
 
