--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyekAkhirPAM"
         tools:targetApi="31">
+
         <activity
             android:name=".DonatePayment"
             android:exported="false" />
@@ -29,7 +30,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".AddFoodActivity"
             android:exported="false" />
@@ -44,24 +45,13 @@
             android:exported="false" />
         <activity
             android:name=".HistoryActivity"
-            android:exported="false"
-            android:theme="@style/Theme.ProyekAkhirPAM" />
-        <activity
-            android:name=".SplashActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".RincianPembelianActivity"
             android:exported="false" />
         <activity
             android:name=".DaftarPembelianActivity"
-            android:exported="false" /> <!-- Hanya SATU deklarasi AccountActivity -->
-        <activity android:name=".DonationActivity" />
+            android:exported="false" />
+        <activity
+            android:name=".DonationActivity"
+            android:exported="false" />
         <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
@@ -81,11 +71,17 @@
             android:name=".WelcomeActivity"
             android:exported="false" />
         <activity
-            android:name=".EditProfileActivity"
+            android:name=".DetailActivity"
             android:exported="false" />
-        <activity
-            android:name=".ProfileActivity"
-            android:exported="false" />
-    </application>
 
+        <!-- Activity launcher utama -->
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
