--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -18,64 +19,53 @@
         android:theme="@style/Theme.ProyekAkhirPAM"
         tools:targetApi="31">
 
+        <!-- Donation -->
         <activity
-            android:name=".EditProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".WelcomeActivity"
+            android:name=".DonateDetail"
             android:exported="false" />
         <activity
             android:name=".DonatePayment"
             android:exported="false" />
         <activity
-            android:name=".DonateDetail"
+            android:name=".DonationActivity"
             android:exported="false" />
-        <activity
-            android:name=".PertemananActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".AddFoodActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="false" />
-        <activity
-            android:name=".RincianPembelianActivity"
-            android:exported="false" />
+
+        <!-- Food Donation -->
         <activity
             android:name=".HistoryActivity"
             android:exported="false"
             android:theme="@style/Theme.ProyekAkhirPAM" />
         <activity
-            android:name=".SplashActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:name=".AddFoodActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".DonationActivity"
+            android:name=".RincianPembelianActivity"
+            android:exported="false" />
+
+        <!-- Profile -->
+        <activity
+            android:name=".PertemananActivity"
             android:exported="false" />
         <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".ProfileActivity"
+            android:name=".InfoProfileActivity"
+            android:exported="false" />
+
+        <!-- Home & Article -->
+        <activity
+            android:name=".DetailActivity"
             android:exported="false" />
         <activity
-            android:name=".FoodPickupActivity"
+            android:name=".FormPostinganActivity"
             android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
+        <!-- Auth & Profile -->
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -85,15 +75,8 @@
         <activity
             android:name=".WelcomeActivity"
             android:exported="false" />
-        <activity
-            android:name=".DetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".InfoProfileActivity"
-            android:name=".FormPostinganActivity"
-            android:exported="false" />
 
-        <!-- Activity launcher utama -->
+        <!-- Splash Screen -->
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -102,5 +85,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 </manifest>
