--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".DonatePayment"
             android:exported="false" />
         <activity
-            android:name=".DonationActivity"
+            android:name=".AddDonationActivity"
             android:exported="false" />
 
         <!-- Food Donation -->
