Refactor DonationDetail to DonationDetailActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
         <!-- Donation -->
         <activity
-            android:name=".DonateDetail"
+            android:name=".DonateDetailActivity"
             android:exported="false" />
         <activity
             android:name=".DonatePayment"
