--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyekAkhirPAM"
         tools:targetApi="31">
-
         <!-- Donation -->
+        <activity
+            android:name=".EditDonationActivity"
+            android:exported="false" />
         <activity
             android:name=".DonateDetailActivity"
             android:exported="false" />
@@ -67,7 +69,7 @@
             android:name=".MainActivity"
             android:exported="false" />
 
-        <!-- Auth  -->
+        <!-- Auth -->
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -78,11 +80,8 @@
             android:name=".WelcomeActivity"
             android:exported="false" />
         <activity
-            android:name=".FormPostinganActivity"
-            android:exported="false" />
-        <activity
             android:name=".HistoryPage"
-            android:exported="false"/>
+            android:exported="false" />
 
         <!-- Splash Screen -->
         <activity
@@ -90,8 +89,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
